# ouster-lidar-mcp-server

./: README.md  app_setup.py  main.py  pyproject.toml  pytest.ini  scan_operations.py  sensor_operations.py  setup.py  test_client.py  test_tools.py  visualization.py
tests/: conftest.py  test_client.py  test_server.py  test_simple.py
