[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ouster-lidar-mcp-server"
version = "0.1.0"
description = "Model Context Protocol (MCP) server for Ouster Lidar sensors"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.7.1",
    "ouster-sdk>=0.14.0",
]

[project.scripts]
ouster-mcp-server = "main:main"

[dependency-groups]
dev = [
    "pyright>=1.1.400",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
